# tree-sitter-fig

./: CMakeLists.txt  CONFLICT_RESOLUTION.md  Cargo.toml  EDITOR_SETUP.md  LICENSE  Makefile  PATH_SEGMENT_CONFLICT_SOLUTIONS.md  PREFIX_ARRAYS_UPDATE.md  Package.swift  README.md  binding.gyp  example-file.nyx  go.mod  grammar.js  highlighted.html  package-lock.json  package.json  pyproject.toml  setup.py  test-comprehensive-highlighting.nyx  test-dot-notation.nyx  test-highlighting-issues.nyx  test-namespace-highlighting.nyx  test-path-segment-conflict.nyx  test-prefix-arrays.nyx  test-prefix-complete.nyx  test-simple-type-restriction.nyx  test-struct-all-cases.nyx  test-type-prefixed-paths.nyx  tree-sitter.json
editor-config/: nvim-ftplugin-nyx.lua
examples/: example-file.nyx  example.fig  t1.fig  t2.fig  t3.fig  t4.nyx  temp.fig  test-array-syntax.fig  test-comprehensive-final.nyx  test-conflict-explanation.fig  test-duplicate-extends.nyx  test-duplicate-where.fig  test-empty-bodies.nyx  test-enum-clauses.fig  test-extends-where.fig  test-final-syntax.nyx  test-function-paths.nyx  test-gen-params.fig  test-generic-blocks.fig  test-generics-at-end.fig  test-highlighting-example.nyx  test-highlighting.nyx  test-impl-blocks.fig  test-impl-where.nyx  test-interface-clauses.nyx  test-minimal.nyx  test-new-syntax.fig  test-paths-clean.nyx  test-requires-where.nyx  test-simple-empty.fig  test-struct-fields-only.nyx  test-struct-where-fields.fig  test-type-prefixed-highlight.fig  test-unified-syntax.nyx  test-union-clauses.fig  test-user-input.nyx  test-vec-t-push.nyx  tg.fig  (+3 more)
(+70 files in other folders)
